testsuite/poke.pkl/preincr-f64-diag-1.pk
/* { dg-do compile } */

var a = 1H;

var b = (.++a); /* { dg-error "invalid operand.*" } */
